fixed header-cta overflow

--- a/optimized/public/css/Header/Header.scss
+++ b/optimized/public/css/Header/Header.scss
@@ -1,5 +1,6 @@
 @import "../Utils/Mixins.scss";
 header {
+  // overflow: hidden;
   .header {
     background-image: url("../../assets/blue-background-globe-image.webp");
     background-size: cover;
@@ -145,13 +146,10 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    // width: 27%;
-    width: -webkit-min-content;
-    width: -moz-min-content;
-    width: min-content;
+    // width: min-content;
     height: 100%;
     font-size: 0.75em;
-    padding: 0 0.5em;
+    // padding: 0 01em;
     background: rgb(248, 54, 0);
     background: linear-gradient(
       0deg,
@@ -160,7 +158,6 @@ header {
     );
 
     @include breakpoint(l) {
-      padding: 0.125em;
       font-size: 0.8em;
     }
 
@@ -169,7 +166,7 @@ header {
     }
 
     p {
-      margin: 4% auto;
+      // margin: 14% auto;
       font-size: 1.2em;
       font-weight: 700;
       @include breakpoint(m) {
@@ -196,6 +193,7 @@ header {
 
       .cta-btn {
         font-size: 2.5em;
+        cursor: pointer;
         @include breakpoint(xxs, xs, s) {
           font-size: 2em;
         }
@@ -206,21 +204,12 @@ header {
         //   width: 100%;
         //   align-self: center;
       }
-
-      .cta-mail {
+      svg {
         fill: white;
         color: $darkBlue;
-        // font-size: 2em;
       }
-
-      .cta-phone {
-        color: $darkBlue;
-        fill: white;
-        // font-size: 2em;
-        // @include breakpoint(xxs, xs, s) {
-        //   margin-top: 25%;
-        //   height: 80%;
-        // }
+      a {
+        cursor: pointer;
       }
     }
   }
